--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@expo/ui": "~0.2.0-beta.7",
     "@expo/vector-icons": "^15.0.2",
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/bottom-tabs": "^7.4.0",
@@ -18,9 +19,11 @@
     "@react-navigation/native": "^7.1.8",
     "datetimepicker": "^0.1.39",
     "expo": "~54.0.13",
+    "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.9",
     "expo-document-picker": "~14.0.7",
     "expo-font": "~14.0.9",
+    "expo-glass-effect": "~0.1.4",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.9",
     "expo-linking": "~8.0.8",
